--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/app-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="VoiceAgent - 智能语音助理配置平台。通过先进的 AI 技术为您的应用添加自然、流畅的语音交互能力。" />
   <title>VoiceAgent - 智能语音助理配置平台</title>
